Mobile responsiveness(need to work on it), added semester results

--- a/index.html
+++ b/index.html
@@ -40,19 +40,28 @@
 
     <p id = "hkid-check">Yep thats me</p>
 </body>
-<h1>Qualification!</h1>
+<h1 style = "margin-top: 1em;">Qualification!</h1>
 <section class = "Qualification">
 <h2 style = "text-decoration: underline;">Education</h2>
-<pre><p style = "font-size: 20px;"><strong>University of Wollongong</strong>                              2025 - Current</pre></p>  
+<pre><p style = "font-size: 17px; text-align: left;"><strong>University of Wollongong</strong>                                      2025 - Current</pre></p>  
 <p style = "margin-top: -30px;"><i>Bachelor of Science in Computer Science</i></p>
-<pre><p style = "font-size: 20px;"><strong>IVE (Haking Wong) </strong>                                    2019 - 2021</pre></p>  
-<p style = "margin-top: -30px;"><i>Higher Dimploma in Computer Engineering</i></p>
-<h2 style = "text-decoration: underline;">Internship and Jobs</h2>
- <pre><p style = "font-size: 20px;"><strong>HKEVPower</strong>                                            Dec 2018- May 2018</pre></p>
-<ul style = "margin-top: -15px">
-    <li>Internship Through IVE</li>
-    <li>Worked as a Field Engineer, helping the staff to install and maintain Charging Station</li>
-    <li>Good Recommendation letter and was offered a summer time job</li>
+
+<p style = "text-align: left;"> Semester 1 (Result): <span id = "ddl" onclick="getResult()">▼</span>  </p>
+<div id = "Results" style = "display: none;">
+<p style = "text-align: left;"> CSCI35-Database Systems: Distinction  </p>
+<p style = "text-align: left;" > CSIT128-Introduction to Web Technology: Distinction</p>
+<p style = "text-align: left;">CSIT214-IT Project Management: Credit </p>
+<p style = "text-align: left;"> CSIT226-Human Computer Interaction: Distinction </p>
+</div>
+<pre><p style = "font-size: 17px; text-align:left;"><strong>IVE (Haking Wong) </strong>                                            2019 - 2021</pre></p>  
+
+<p style = "margin-top: -30px;"><i>Higher Diploma in Computer Engineering</i></p>
+<h2 style = "text-decoration: underline; margin-top: 1em;">Internship and Jobs</h2>
+ <pre><p style = "font-size: 20px; margin-top: 1em;"><strong>HKEVPower</strong>                                            Dec 2018- May 2018</pre></p>
+<ul style >
+    <li style = "text-align: left;">Internship Through IVE</li>
+    <li style = "text-align: left;">Worked as a Field Engineer, helping the staff to install and maintain Charging Station</li>
+    <li style = "text-align: left;">Good Recommendation letter and was offered a summer time job</li>
 </ul>
 </section>
 
