--- a/index.html
+++ b/index.html
@@ -3,67 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Gurung Gaurab CV</title>
-    <script type = 'text/javascript' src = "lightmode.js" defer></script>
+    <script src="lightmode.js" defer></script>
 </head>
 <body>
+
     <header>
-        <button id = "theme-switch">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+        <button id="theme-switch">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                <path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                <path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/>
+            </svg>
         </button>
     </header>
-    <img id = "image" src = "template.jpeg" alt = "">
-    <section id = "main">
-        
-       <h1><span class="wave-hand">👋</span> Hello! I'm Gaurab Gurung</h1>
-    </section>
-    <section class ="me">
-        <p>Im a: </p>
-        <ul>
+
+    <img id="image" src="template.jpeg" alt="Gaurab Gurung">
+
+    <h1>
+        <span class="wave-hand">👋</span> Hello! I'm Gaurab Gurung
+    </h1>
+
+    <!-- About / Bio section -->
+    <section class="about-me">
+        <h2>I'm a:</h2>
+        <ul class="bio-list">
             <li>CS Student</li>
             <li>Avid Gamer</li>
-            <li>loves hiking</li>
+            <li>Hiking Enthusiast</li>
         </ul>
     </section>
-    <section class = "contact-info">
-        <p>You can email me <a id = "clickable" href = "https://mail.google.com/mail/?view=cm&fs=1&to=gg373@uowmail.edu.au" target="_blank"><i>&lt;here&gt;</i></a></p>
-        <p>You can Whatsapp me <a id = "clickable" href = "https://wa.me/85251142437" target = "_blank"><i>&lt;here&gt;</i></a></p>
-        <p>or to Verify its actually me <a id= "clickable" onclick="toggleText()"><i>&lt;here&gt;</i></a></p>
+
+    <section class="contact-info">
+        <p>You can email me <a id="clickable" href="https://mail.google.com/mail/?view=cm&fs=1&to=gg373@uowmail.edu.au" target="_blank"><i>&lt;here&gt;</i></a></p>
+        <p>You can Whatsapp me <a id="clickable" href="https://wa.me/85251142437" target="_blank"><i>&lt;here&gt;</i></a></p>
+        <p>or to Verify its actually me <a id="clickable" onclick="toggleText()"><i>&lt;here&gt;</i></a></p>
     </section>
 
-    <section id = "verify">
-        <label for = "hkid">Please enter the first 4 digits of my HKID</label>
-        <input type = "text" name = "hkid" id = "hkid" style = "border-radius: 20px;" placeholder="A123" maxlength="4" >
+    <section id="verify">
+        <label for="hkid">Please enter the first 4 digits of my HKID</label>
+        <input type="text" name="hkid" id="hkid" placeholder="A123" maxlength="4">
     </section>
 
-    <p id = "hkid-check">Yep thats me</p>
-</body>
-<h1 style = "margin-top: 1em;">Qualification!</h1>
-<section class = "Qualification">
-<h2 style = "text-decoration: underline;">Education</h2>
-<pre><p style = "font-size: 17px; text-align: left;"><strong>University of Wollongong</strong>                                      2025 - Current</pre></p>  
-<p style = "margin-top: -30px;"><i>Bachelor of Science in Computer Science</i></p>
+    <p id="hkid-check">Yep thats me</p>
 
-<p style = "text-align: left;"> Semester 1 (Result): <span id = "ddl" onclick="getResult()">▼</span>  </p>
-<div id = "Results" style = "display: none;">
-<p style = "text-align: left;"> CSCI35-Database Systems: Distinction  </p>
-<p style = "text-align: left;" > CSIT128-Introduction to Web Technology: Distinction</p>
-<p style = "text-align: left;">CSIT214-IT Project Management: Credit </p>
-<p style = "text-align: left;"> CSIT226-Human Computer Interaction: Distinction </p>
-</div>
-<pre><p style = "font-size: 17px; text-align:left;"><strong>IVE (Haking Wong) </strong>                                            2019 - 2021</pre></p>  
+    <!-- Qualification section - now properly inside body -->
+    <h1 style="margin-top: 2em;">Qualifications</h1>
 
-<p style = "margin-top: -30px;"><i>Higher Diploma in Computer Engineering</i></p>
-<h2 style = "text-decoration: underline; margin-top: 1em;">Internship and Jobs</h2>
- <pre><p style = "font-size: 20px; margin-top: 1em;"><strong>HKEVPower</strong>                                            Dec 2018- May 2018</pre></p>
-<ul style >
-    <li style = "text-align: left;">Internship Through IVE</li>
-    <li style = "text-align: left;">Worked as a Field Engineer, helping the staff to install and maintain Charging Station</li>
-    <li style = "text-align: left;">Good Recommendation letter and was offered a summer time job</li>
-</ul>
-</section>
+    <section class="Qualification">
+        <h2 style="text-decoration: underline;">Education</h2>
 
+        <div class="edu-item">
+            <strong>University of Wollongong</strong> <span class="date">2025 – Current</span>
+            <div class="degree">Bachelor of Science in Computer Science</div>
 
-</html>
+            <p class="results-title">
+                Semester 1 (Result): <span id="ddl" onclick="getResult()">▼</span>
+            </p>
+            <div id="Results" style="display: none;">
+                <p>CSCI35 - Database Systems: Distinction</p>
+                <p>CSIT128 - Introduction to Web Technology: Distinction</p>
+                <p>CSIT214 - IT Project Management: Credit</p>
+                <p>CSIT226 - Human Computer Interaction: Distinction</p>
+            </div>
+        </div>
+
+        <div class="edu-item">
+            <strong>IVE (Haking Wong)</strong> <span class="date">2019 – 2021</span>
+            <div class="degree">Higher Diploma in Computer Engineering</div>
+        </div>
+
+        <h2 style="text-decoration: underline; margin-top: 2em;">Internship and Jobs</h2>
+
+        <div class="job-item">
+            <strong>HKEVPower</strong> <span class="date">Dec 2018 – May 2019</span>
+            <ul>
+                <li>Internship Through IVE</li>
+                <li>Worked as a Field Engineer, helping install and maintain EV Charging Stations</li>
+                <li>Received good recommendation letter and was offered summer job</li>
+            </ul>
+        </div>
+    </section>
+    </body>
+    </html>
