i made one more ddl,v2

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="degree">Bachelor of Science in Computer Science</div>
 
             <p class="results-title">
-                Semester 1 (Result): <span id="ddl" onclick="getResult()">▼</span>
+                Semester 1 (Result): <a id="ddl" onclick = "getResult()">▼<a></a>
             </p>
             <div id="Results" style="display: none;">
                 <p>CSCI35 - Database Systems: <span style = "text-decoration: underline;">Distinction</span></p>
