removed whatsapp for safety reasons and added github

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="contact-info">
         <p>You can email me <a id="clickable" href="https://mail.google.com/mail/?view=cm&fs=1&to=gg373@uowmail.edu.au" target="_blank"><i>&lt;here&gt;</i></a></p>
-        <p>You can Whatsapp me <a id="clickable" href="https://wa.me/85251142437" target="_blank"><i>&lt;here&gt;</i></a></p>
+        <p>Access my github <a id="clickable" href="https://github.com/GurungGaurab" target="_blank"><i>&lt;here&gt;</i></a></p>
         <p>or to Verify its actually me <a id="clickable" onclick="toggleText()"><i>&lt;here&gt;</i></a></p>
     </section>
 
